--- a/frontend/src/Components/ProductoItem/ProductoItem.css
+++ b/frontend/src/Components/ProductoItem/ProductoItem.css
@@ -3,6 +3,12 @@
 .producto-item {
   text-align: center;
   margin: 1rem 0;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  /* Eliminar height y overflow para que se ajuste automáticamente */
 }
 
 .producto-item h5 {
@@ -41,4 +47,26 @@
 
 .boton-comprar:hover {
   background-color: #ff1493;
+}
+
+.producto-imagen {
+  width: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
+  height: auto; /* Mantiene la proporción de la imagen */
+  object-fit: cover; /* Esto ajustará la imagen para que cubra el contenedor sin salirse */
+}
+
+.producto-imagen.contain {
+  object-fit: contain; /* Si prefieres que la imagen se ajuste sin recortes, usa 'contain' */
+}
+
+.producto-item h5,
+.descuento-producto,
+.precio-producto,
+.producto-imagen {
+  flex-grow: 0; /* No permite que estos elementos crezcan */
+}
+
+.boton-comprar {
+  flex-grow: 1; /* El botón crecerá y empujará hacia abajo el contenido anterior */
+  margin-top: 1rem;
 }
