--- a/frontend/src/Components/UploadSection/UploadSection.css
+++ b/frontend/src/Components/UploadSection/UploadSection.css
@@ -53,3 +53,10 @@
   flex-direction: column;
   gap: 1rem;
 }
+
+.posts-container {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
