--- a/frontend/src/Components/TopMascotas/TopMascotas.css
+++ b/frontend/src/Components/TopMascotas/TopMascotas.css
@@ -15,3 +15,11 @@
   margin-bottom: 2rem;
   text-align: center;
 }
+
+.Main_Top_Macotas {
+  display: flex;
+  flex-direction: row;
+
+  align-items: center; /* Centra los hijos horizontalmente */
+  width: 100%; /* Asegura que el ancho sea completo */
+}
